src/objects/Shop__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>14</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporation__c</fullName>
        <label>Corporation</label>
        <referenceTo>Corporation__c</referenceTo>
        <relationshipLabel>Shops</relationshipLabel>
        <relationshipName>Shops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Director_Field__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director Field</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shops</relationshipLabel>
        <relationshipName>Shops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue__c</fullName>
        <label>Monthly Revenue</label>
        <precision>14</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Shop</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Shop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Director_Field</fullName>
        <active>true</active>
        <errorConditionFormula>LEN( Director_Field__c )  = 0</errorConditionFormula>
        <errorDisplayField>Director_Field__c</errorDisplayField>
        <errorMessage>Need enter the director name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Monthly_Revenue</fullName>
        <active>true</active>
        <errorConditionFormula>Monthly_Revenue__c  &lt;= 0</errorConditionFormula>
        <errorDisplayField>Monthly_Revenue__c</errorDisplayField>
        <errorMessage>Must be positive value</errorMessage>
    </validationRules>
</CustomObject>